--- a/slides/cap_intro.tex
+++ b/slides/cap_intro.tex
@@ -308,8 +308,11 @@ Estos modelos han ido perfeccionándose en los últimos años, logrando resultad
 
 
 
+\section{Conclusiones y Estructura del Apunte}
+En este capítulo, hemos explorado el desafío de comprender y generar lenguaje utilizando la computación. El aprendizaje automático supervisado se ha destacado como una de las principales técnicas utilizadas para abordar este desafío. También discutimos las limitaciones y desafíos que enfrenta el Procesamiento del Lenguaje Natural (PLN), como la anotación de datos, la generalización a nuevos dominios y la evolución del lenguaje, entre otros aspectos que requieren una atención cuidadosa. Finalmente, hemos visto cómo el aprendizaje profundo ha demostrado mejoras significativas en el rendimiento de los modelos de PLN. Estos modelos, como las redes neuronales, han logrado superar barreras anteriores al ser capaces de capturar patrones más complejos y aprender representaciones más ricas del lenguaje.
 
-\section{Conclusiones}
-En este capítulo, hemos explorado el desafío de comprender y producir lenguaje utilizando la computación. El aprendizaje automático supervisado se ha destacado como una de las principales técnicas utilizadas para abordar este desafío. Además, hemos discutido las propiedades desafiantes del lenguaje. Finalmente, hemos visto cómo el aprendizaje profundo ha demostrado mejoras significativas en el rendimiento de los modelos de PLN. Estos modelos, como las redes neuronales, han logrado superar barreras anteriores al poder capturar patrones más complejos y aprender representaciones más ricas del lenguaje.
+Este apunte se estructura de la siguiente manera: en el capítulo~\ref{cap_ir} se presenta el modelo de espacio vectorial junto a la discplina hermana de PLN: la recuperación de información. En el capítulo~\ref{cap_plm} se discuten los modelos de lenguaje probabilísticos basados en n-gramas. En el capítulo~\ref{cap_nb}, formalizamos la tarea de clasificación de texto e introducimos el modelo naïve bayes. Luego, en el capítulo~\ref{cap_lineales}, se presentan los modelos lineales en PLN, y en el capítulo~\ref{cap_redes}, se introducen las redes neuronales. Los vectores de palabras o ``word embeddings'' se discuten en el capítulo~\ref{cap_embeddings}. Las tareas de etiquetado de secuencia, como el etiquetado gramatical y la extracción de entidades nombradas, se formalizan en el capítulo~\ref{cap_etisec}, junto con modelos clásicos para esta tarea, como las cadenas de Markov ocultas y los Conditional Random Fields.
 
-Sin embargo, también discutido las limitaciones y desafíos que enfrenta el PLN. La anotación de datos, la generalización a nuevos dominios y la evolución del lenguaje son solo algunos de los aspectos que requieren una atención cuidadosa. Además, la preocupación por los sesgos y prejuicios presentes en los datos y en los modelos es una consideración crítica para garantizar la equidad y la ética en la aplicación de PLN.
+A partir del capítulo~\ref{cap_cnn}, se discuten arquitecturas especializadas de redes neuronales para PLN. Las redes convolucionales se tratan en el capítulo~\ref{cap_cnn}, las recurrentes en el capítulo~\ref{cap_rnn}, los modelos secuencia a secuencia, junto con los modelos de atención, en el capítulo~\ref{cap_sec}, y finalmente, la arquitectura de Transformer se desarrolla en el capítulo~\ref{cap_trans}.
+
+Cerramos el apunte en el capítulo~\ref{cap_llm}, donde se presentan modelos modernos de vectores de palabras contextualizados y los grandes modelos de lenguaje.
