--- a/slides/cap_intro.tex
+++ b/slides/cap_intro.tex
@@ -1,11 +1,10 @@
-
-El volumen de datos textuales digitalizados generados diariamente, provenientes de fuentes como la web, redes sociales, registros médicos y libros digitalizados, es simplemente enorme. Como resultado, se ha vuelto necesario traducir, analizar, resumir y extraer información avalancha de palabras y texto.
+El volumen de datos textuales digitalizados que se generan a diario a partir de fuentes como la web, las redes sociales, los registros médicos y los libros digitalizados es colosal. Como consecuencia, se ha hecho necesario traducir, analizar, resumir y extraer información de esta avalancha de palabras y texto.
 
 El Procesamiento del Lenguaje Natural (PLN) es el campo que se encarga de diseñar métodos y algoritmos que procesan datos de lenguaje natural, ya sea como entrada o salida \cite{goldberg2017neural}. El objetivo principal del PLN es desarrollar y analizar algoritmos computacionales y representaciones para procesar el lenguaje humano de manera efectiva \cite{jacobbook}.
 
 Es importante destacar que el lenguaje natural puede provenir tanto de fuentes escritas como habladas. Aunque el PLN suele centrarse más en el procesamiento de texto, se pueden aplicar técnicas de reconocimiento de habla o transcripción para abordar de manera similar ambas fuentes de información.
 
-El surgimiento de tecnologías del PLN disruptivas como ChatGPT y Google Bard que permiten reescribir oraciones completas, traducir y desarrollar ideas elaboradas a partir de un ``prompt'' hace aún más necesario formar personas con conocimientos disciplinares en el área, el motivo de este apunte es brindar los conocimientos necesarios para entender cómo funcionan dichos sistemas.
+El surgimiento de tecnologías de PLN disruptivas como ChatGPT y Google Bard que permiten reescribir oraciones completas, traducir y desarrollar ideas elaboradas a partir de un ``prompt'' hace aún más necesario el estudio de los fundamentos del área, el objetivo de este apunte es brindar los conocimientos necesarios para comprender el funcionamiento de dichos sistemas.
 
 \section{Desafíos del Procesamiento del Lenguaje Natural (PLN)}
 
@@ -41,7 +40,7 @@ El significado de una oración va más allá del significado individual de sus p
 
 \paragraph{Dispersión (sparseness)}
 
-La forma en que las palabras (símbolos discretos) pueden combinarse para formar significados es prácticamente infinita. Esto implica que, en general, las oraciones que encontramos en un documento son únicas o rara vez han sido escritas antes. Por lo tanto, cualquier enfoque de fuerza bruta que intente memorizar oraciones a partir de una colección de documentos data (o corpus) no garantiza una buena generalización a textos nuevos.
+La forma en que las palabras (símbolos discretos) pueden combinarse para formar significados es prácticamente infinita. Esto implica que, en general, las oraciones que encontramos en un documento son únicas o rara vez han sido escritas antes. Por lo tanto, cualquier enfoque de fuerza bruta que intente memorizar oraciones a partir de una colección de documentos (o corpus) no garantiza una buena generalización a textos nuevos.
 
 
 
@@ -167,11 +166,11 @@ Baghdad      NNP  I-NP  I-LOC
 \end{center}
 
 
-A continuación desarrollamos de forma más concreta el uso de aprendizaje automático para tareas de PLN.
+A continuación desarrollamos de forma más concreta el uso del aprendizaje automático para tareas de PLN mediante dos ejemplos.
 
 \subsection{Ejemplo 1: Clasificación de Tópicos}
 
-La clasificación de tópicos es una tarea específica de la clasificación de documentos, en la cual se asigna a cada documento una de varias categorías predefinidas, como deportes, política, farándula o economía. La idea fundamental es que las palabras presentes en los documentos pueden ser indicativas del tema que abordan. Sin embargo, crear reglas manuales para esta tarea resulta desafiante debido a la complejidad del lenguaje. La anotación de datos, en la cual personas etiquetan manualmente una colección de documentos según su tema, puede ser de gran ayuda para generar conjuntos de datos de entrenamiento utilizados por algoritmos de aprendizaje automático supervisado. Estos algoritmos aprenden patrones de uso de palabras que facilitan la categorización de los documentos y suelen ser más robustos que los patrones construidos manualmente.
+La clasificación de tópicos es una tarea específica de la clasificación de documentos, en la cual se asigna a cada documento una de varias categorías predefinidas, como deportes, política, farándula o economía. La idea fundamental es que las palabras presentes en los documentos pueden ser indicativas del tema que abordan. Sin embargo, crear reglas manuales para esta tarea resulta desafiante debido a la complejidad del lenguaje. La anotación de datos, en la cual personas etiquetan manualmente una colección de documentos según su tema, puede ser de gran ayuda para generar conjuntos de datos de entrenamiento utilizados por algoritmos de aprendizaje automático supervisado. Estos algoritmos aprenden patrones de uso de palabras que facilitan la categorización de los documentos y suelen ser más robustos que las reglas construidas de forma manual.
 
 
 \subsection{Ejemplo 2: Análisis de Sentimiento}
@@ -180,12 +179,12 @@ El análisis de sentimientos se refiere a la aplicación de técnicas PLN para i
 
 Una aplicación concreta del análisis de sentimiento es construir un modelo que nos diga si un tweet tiene un sentimiento positivo o negativo respecto a un producto. Para resolver el problema con aprendizaje supervisado primero necesitamos etiquetar manualmente un conjunto de tweets con su sentimiento asociado. Luego debemos entrenar un algoritmo de aprendizaje utilizando estos datos para poder predecir de manera automática el sentimiento asociado a tweets desconocidos. Como podrán imaginar, el etiquetado de datos es una parte fundamental de la solución y puede ser un proceso muy costoso, especialmente cuando se requiere conocimiento especializado para definir la etiqueta.
 
-En este tipo de clasificación, es común transformar las oraciones en vectores de características y aplicar modelos lineales como las Máquinas de Vectores de Soporte (SVM), como se ilustra en la Figura~\ref{fig:senti_class}. Una forma habitual de representar las oraciones o documentos en forma vectorial es mediante el enfoque de la bolsa-de-palabras, donde cada documento se representa como un vector con una columna por cada palabra identificada en el conjunto de documentos (o corpus). Si una palabra está presente en un documento, se asigna un valor distinto de cero en la columna correspondiente, ya sea 1 o la frecuencia de la palabra en el documento. En caso de que la palabra no esté presente, se asigna un valor cero en esa columna.
+En este tipo de clasificación, es común transformar las oraciones en vectores de características (cada característica es una columna o dimensión del vector) y aplicar modelos lineales como las Máquinas de Vectores de Soporte (SVM), como se ilustra en la Figura~\ref{fig:senti_class}. Una forma habitual de representar las oraciones o documentos en forma vectorial es mediante el enfoque de la bolsa-de-palabras, donde cada documento se representa como un vector con una columna por cada palabra identificada en el conjunto de documentos (o corpus). Si una palabra está presente en un documento, se asigna un valor distinto de cero en la columna correspondiente, ya sea 1 o la frecuencia de la palabra en el documento. En caso de que la palabra no esté presente, se asigna un valor cero en esa columna.
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale = 0.5]{pics/bagOfwordsClassification.pdf}
-\caption{Proceso de Clasificación de Sentimiento en Tweets con Vectores Baf of Words}
+\caption{Proceso de Clasificación de Sentimiento en Tweets con Vectores Bolsa-de-Palabras.}
 \label{fig:senti_class}
 \end{figure}
 
@@ -257,30 +256,32 @@ Todas estas decisiones pueden tener consecuencias en la calidad de los conjuntos
 En algunos casos, es posible etiquetar datos de manera semi-automática con una técnica llamada supervisón a distancia, lo que permite ahorrar costos de anotación. Un ejemplo de esto es el enfoque de anotación de emoticones utilizado en la clasificación de sentimientos en tweets. En este enfoque, se utiliza la API de Twitter para recopilar tweets que contengan emoticones positivos \textcolor[rgb]{0.00,0.00,1.00}{\textbf{:)}} o negativos \textcolor[rgb]{1.00,0.00,0.00}{\textbf{:(}}, y luego se etiquetan los tweets según la polaridad indicada por el emoticón~\cite{Read2005}. El emoticón se \textbf{elimina} del contenido del tweet. Este enfoque también se ha ampliado utilizando hashtags como \#rabia y emojis. Sin embargo, no es trivial encontrar técnicas de supervisión a distancia que sean aplicables a todos los tipos de problemas en PLN.
 
 \subsection{Crowdsourcing}
-Las plataformas de crowdsourcing, como \textbf{Amazon Mechanical Turk}, ofrecen la posibilidad de etiquetar datos a gran escala mediante el pago a etiquetadores remotos. Si bien este enfoque permite la anotación masiva de datos, es difícil garantizar la calidad esperada por parte de los anotadores. Sin embargo, ha sido gracias a este enfoque que se ha logrado la proliferación de numerosos conjuntos de datos para entrenar modelos supervisados en PLN.
+Las plataformas de crowdsourcing, como \textbf{Amazon Mechanical Turk (AMT)}, ofrecen la posibilidad de etiquetar datos a gran escala mediante el pago a etiquetadores remotos. Si bien este enfoque permite la anotación masiva de datos, es difícil garantizar la calidad esperada por parte de los anotadores. Sin embargo, ha sido gracias a este enfoque que se ha logrado la proliferación de numerosos conjuntos de datos para entrenar modelos supervisados en PLN. En \cite{snow2008cheap} se realiza una comparación exhaustiva sobre la calidad de las anotaciones obtenidas con AMT para diversas tareas de PLN.  Los resultados muestran que las anotaciones obtenidas son comparables a las de los anotadores expertos. 
 
 \section{Paradigmas de Aprendizaje Automático}
 
-Hasta el año 2010, el Procesamiento del Lenguaje Natural (PLN) se basaba en modelos de aprendizaje poco profundos y en características manuales. Por ejemplo, en 2013, el taller de Evaluación Semántica (SemEval) organizó la tarea de ``Análisis de sentimientos en Twitter'' \cite{Semeval2013}. Esta tarea se dividió en dos sub-tareas: el nivel de expresión y el nivel del mensaje. El nivel de expresión se centró en determinar la polaridad del sentimiento de un mensaje según una entidad marcada dentro de su contenido, mientras que el nivel del mensaje buscaba determinar la polaridad según el mensaje en general. Los organizadores proporcionaron conjuntos de datos de entrenamiento y prueba para ambas tareas \cite{Semeval2013}.
+Hasta el año 2010, el Procesamiento del Lenguaje Natural (PLN) se basaba en modelos de aprendizaje poco profundos y en características manuales. Por ejemplo, en 2013, el taller de Evaluación Semántica (SemEval) organizó la tarea de "Análisis de sentimientos en Twitter" \cite{Semeval2013}. Esta tarea se dividió en dos sub-tareas: el nivel de expresión y el nivel del mensaje. El nivel de expresión se centró en determinar la polaridad del sentimiento de un mensaje según una entidad marcada dentro de su contenido, mientras que el nivel del mensaje buscaba determinar la polaridad según el mensaje en general. Los organizadores proporcionaron conjuntos de datos de entrenamiento y prueba para ambas tareas \cite{Semeval2013}.
 
-El equipo que logró el mejor rendimiento en ambas tareas, entre 44 equipos participantes, fue el equipo llamado \emph{NRC-Canada} \cite{Mohammad2013}. Este equipo propuso un enfoque supervisado utilizando un clasificador SVM lineal, utilizando características hechas a mano para representar los tweets. Algunas de estas características fueron:
+El equipo que logró el mejor rendimiento en ambas tareas, entre 44 equipos participantes, fue el equipo llamado \emph{NRC-Canada} \cite{Mohammad2013}. Este equipo propuso un enfoque supervisado utilizando un clasificador SVM lineal y características hechas a mano para representar los tweets. Algunas de estas características fueron:
 
 \begin{enumerate}
-  \item N-gramas de palabras.
-  \item N-gramas de caracteres.
-  \item Etiquetas de partes del discurso.
-  \item Agrupaciones de palabras entrenadas con el método de agrupamiento de Brown \cite{brown1992class}.
+  \item N-gramas de palabras (similares a los vectores bolsa-de-palabras, pero con secuencias contiguas de $n$ palabras).
+  \item N-gramas de caracteres (similar a lo anterior, pero con secuencias contiguas de $n$ caracteres).
+  \item Etiquetas de categorías gramaticales.
+  \item Clusters de palabras entrenadas con el método de Brown \cite{brown1992class}.
   \item El número de palabras alargadas (palabras con un carácter repetido más de dos veces).
   \item El número de palabras con todas las letras en mayúscula.
-  \item La presencia de emoticonos positivos o negativos.
+  \item La presencia de emoticones positivos o negativos.
   \item El número de negaciones individuales.
   \item El número de secuencias contiguas de puntos, signos de interrogación y signos de exclamación.
-  \item Características derivadas de lexicones de polaridad \cite{Mohammad2013}. Dos de estos lexicones se generaron utilizando el método PMI a partir de tweets anotados con hashtags y emoticonos.
+  \item Características derivadas de lexicones de polaridad \cite{Mohammad2013} (listas de palabras con sentimiento asociado). Dos de estos lexicones se generaron utilizando el método PMI (point-wise mutual information) a partir de tweets anotados con hashtags y emoticones.
 \end{enumerate}
 
-Hasta el año 2014, la mayoría de los sistemas de última generación en PLN se basaban en ingeniería de características junto con modelos de aprendizaje automático superficiales, como SVM y CRF. Diseñar las características de un sistema de PLN ganador requería un amplio conocimiento específico del dominio. El sistema desarrollado por el equipo NRC-Canada se construyó antes de que el aprendizaje profundo se volviera popular en el campo del PLN. Por otro lado, los sistemas de Aprendizaje Profundo, también conocidos como Deep Learning, se basan en redes neuronales para aprender automáticamente buenas representaciones.
+Cabe destacar que todas estas características se concatenan para crear un único vector por cada tweet, generando una representación de alta dimensión.
 
-El Aprendizaje Profundo ha proporcionado resultados de vanguardia en la mayoría de las tareas de PLN. Grandes cantidades de datos de entrenamiento y máquinas GPU multicore más rápidas son fundamentales para el éxito del aprendizaje profundo. Las redes neuronales y los vectores de palabras, también conocidos como word embeddings, desempeñan un papel fundamental en los modelos modernos de PLN.
+Hasta el año 2014, la mayoría de los sistemas del estado-del-arte en PLN se basaban en el paradigma de ingeniería de características (diseño manual de vectores de características) junto con modelos de aprendizaje automático superficiales, como SVM y CRF. Diseñar las características de un sistema de PLN ganador requería un amplio conocimiento específico del dominio. El sistema desarrollado por el equipo NRC-Canada se construyó antes de que el aprendizaje profundo (o deep learning) se volviera popular en el campo del PLN. 
+
+Por otro lado, los sistemas de aprendizaje profundo han revolucionado el campo del PLN. Estos sistemas se basan en redes neuronales profundas para aprender automáticamente buenas representaciones utilizando técnicas como los vectores de palabras (word embeddings) y arquitecturas especializadas como las redes neuronales recurrentes y los Transformers. Estos modelos requieren grandes volúmenes de datos y un alto poder computacional para su entrenamiento efectivo. Las grandes cantidades de datos textuales disponibles en los últimos años, junto con los procesadores de la tarjeta gráfica de múltiples núcleos (GPU y TPU) más rápidos, han sido fundamentales para el éxito del aprendizaje profundo en PLN.
 
 \begin{figure}[h]
 	\centering
@@ -288,7 +289,6 @@ El Aprendizaje Profundo ha proporcionado resultados de vanguardia en la mayoría
 	\caption{Ingeniería de Características vs Aprendizaje Profundo}
 	\label{fig:MLvsDL}
 \end{figure}
-
 
 \paragraph{Aprendizaje Profundo y Conceptos Lingüísticos}
 Si los modelos de aprendizaje profundo pueden aprender representaciones automáticamente, ¿siguen siendo útiles los conceptos lingüísticos (por ejemplo, sintaxis, morfología)? Algunos defensores del aprendizaje profundo argumentan que estas propiedades lingüísticas inferidas y diseñadas manualmente no son necesarias, y que la red neuronal aprenderá estas representaciones intermedias (o equivalentes o mejores) por sí misma \cite{goldberg2016primer}. Aún no hay un consenso definitivo al respecto. Goldberg cree que muchos de estos conceptos lingüísticos pueden ser inferidos por la red por sí misma si se le proporciona suficiente cantidad de datos. Sin embargo, en muchos otros casos no disponemos de suficientes datos de entrenamiento para la tarea que nos interesa, y en estos casos proporcionar a la red los conceptos generales más explícitos puede ser muy valioso.
@@ -302,17 +302,17 @@ El período del racionalismo abarcó desde 1950 hasta 1990, donde las soluciones
 
 A partir de la década de los 90, el enfoque de PLN se inclinó hacia el empirismo, con el diseño de métodos estadísticos y de aprendizaje automático construidos sobre corpus de datos etiquetados. En este período, las reglas ya no se construían manualmente, sino que se ``aprendían'' a partir de los datos. Algunos modelos representativos de esta época son los filtros de spam basados en modelos Bayesianos, las cadenas de Markov ocultas para la extracción de categorías sintácticas y los modelos probabilísticos de IBM para la traducción automática. Estos modelos se caracterizaban por ser poco profundos en su estructura de parámetros y dependían de características manualmente diseñadas para representar la entrada.
 
-A partir del año 2010, las redes neuronales artificiales, que son una familia de modelos de aprendizaje automático, comenzaron a mostrar resultados sobresalientes en varias tareas emblemáticas de PLN \cite{collobert2011natural}. Estos modelos utilizan una jerarquía de parámetros (o capas) para representar la entrada (texto) y encontrar representaciones adecuadas para la tarea en cuestión, en lo que se conoce como ``aprendizaje profundo''. Se caracterizan por tener muchos más parámetros que los modelos anteriores, superando la barrera del millón en algunos casos, y requieren grandes volúmenes de datos para su entrenamiento. Estos modelos pueden ser pre-entrenados con texto no etiquetado, como libros, Wikipedia, textos de redes sociales y de la web, para encontrar representaciones iniciales de palabras y oraciones (conocidas como word embeddings), que luego pueden ser adaptadas para la tarea específica utilizando datos etiquetados (proceso conocido como transfer learning). Entre estos modelos se destacan Word2Vec \cite{Mikolov2013}, BERT \cite{kenton2019bert}, GPT-3 \cite{brown2020language} y otros grandes modelos de lenguaje que han surgido recientemente.
+A partir del año 2010, las redes neuronales artificiales, que son una familia de modelos de aprendizaje automático, comenzaron a mostrar resultados sobresalientes en varias tareas emblemáticas de PLN \cite{collobert2011natural}. Estos modelos utilizan una jerarquía de parámetros (o capas) para representar la entrada (texto) y encontrar representaciones adecuadas para la tarea en cuestión, en lo que se conoce como ``aprendizaje profundo''. Se caracterizan por tener muchos más parámetros que los modelos anteriores, superando la barrera del millón en algunos casos, y requieren grandes volúmenes de datos para su entrenamiento. Estos modelos pueden ser pre-entrenados con texto no etiquetado, como libros, Wikipedia, textos de redes sociales y de la web, para encontrar representaciones iniciales de palabras y oraciones (conocidas como word embeddings), que luego pueden ser adaptadas para la tarea específica utilizando datos etiquetados (proceso conocido como transfer learning). Entre estos modelos se destacan Word2Vec \cite{Mikolov2013}, BERT \cite{kenton2019bert}, GPT-3 \cite{brown2020language} y otros grandes modelos de lenguaje que han surgido recientemente (ChatGPT, Google Bard).
 
 Estos modelos han ido perfeccionándose en los últimos años, logrando resultados cada vez mejores en casi todos los problemas del área. Sin embargo, este progreso no ha estado exento de controversias. El aumento exponencial en la cantidad de parámetros de cada nuevo modelo en comparación con su predecesor ha hecho que la construcción de estos modelos requiera recursos computacionales y energéticos que solo están al alcance de unos pocos. Además, varios estudios han demostrado que estos modelos aprenden y reproducen sesgos y prejuicios presentes en los textos utilizados para su entrenamiento, como los relacionados con género, religión y raza. Un ejemplo destacado es el despido de la investigadora Timmnit Gebru de Google, luego de que se le negara el permiso para publicar un artículo que revelaba estos problemas \cite{bender2021dangers}.
 
 
 
 \section{Conclusiones y Estructura del Apunte}
-En este capítulo, hemos explorado el desafío de comprender y generar lenguaje utilizando la computación. El aprendizaje automático supervisado se ha destacado como una de las principales técnicas utilizadas para abordar este desafío. También discutimos las limitaciones y desafíos que enfrenta el Procesamiento del Lenguaje Natural (PLN), como la anotación de datos, la generalización a nuevos dominios y la evolución del lenguaje, entre otros aspectos que requieren una atención cuidadosa. Finalmente, hemos visto cómo el aprendizaje profundo ha demostrado mejoras significativas en el rendimiento de los modelos de PLN. Estos modelos, como las redes neuronales, han logrado superar barreras anteriores al ser capaces de capturar patrones más complejos y aprender representaciones más ricas del lenguaje.
+En este capítulo, hemos explorado el desafío de comprender y generar lenguaje utilizando la computación. El aprendizaje automático supervisado se ha destacado como una de las principales técnicas utilizadas para abordar este desafío. También discutimos las limitaciones y desafíos que enfrenta el Procesamiento del Lenguaje Natural (PLN), como la anotación de datos, la generalización a nuevos dominios y la evolución del lenguaje, entre otros aspectos que requieren atención. Finalmente, hemos visto cómo el aprendizaje profundo ha demostrado mejoras significativas en el rendimiento de los modelos de PLN. Estos modelos basados en redes neuronales han logrado superar barreras anteriores al ser capaces de capturar patrones más complejos y aprender representaciones más ricas del lenguaje.
 
-Este apunte se estructura de la siguiente manera: en el capítulo~\ref{cap_ir} se presenta el modelo de espacio vectorial junto a la discplina hermana de PLN: la recuperación de información. En el capítulo~\ref{cap_plm} se discuten los modelos de lenguaje probabilísticos basados en n-gramas. En el capítulo~\ref{cap_nb}, formalizamos la tarea de clasificación de texto e introducimos el modelo naïve bayes. Luego, en el capítulo~\ref{cap_lineales}, se presentan los modelos lineales en PLN, y en el capítulo~\ref{cap_redes}, se introducen las redes neuronales. Los vectores de palabras o ``word embeddings'' se discuten en el capítulo~\ref{cap_embeddings}. Las tareas de etiquetado de secuencia, como el etiquetado gramatical y la extracción de entidades nombradas, se formalizan en el capítulo~\ref{cap_etisec}, junto con modelos clásicos para esta tarea, como las cadenas de Markov ocultas y los Conditional Random Fields.
+El resto de este apunte se estructura de la siguiente manera: en el Capítulo~\ref{cap_ir} se presenta el modelo de espacio vectorial junto a la discplina hermana de PLN: la recuperación de información. En el Capítulo~\ref{cap_plm} se discuten los modelos de lenguaje probabilísticos basados en n-gramas. En el Capítulo~\ref{cap_nb}, formalizamos la tarea de clasificación de texto e introducimos el modelo naïve bayes. Luego, en el Capítulo~\ref{cap_lineales}, se presentan los modelos lineales en PLN, y en el Capítulo~\ref{cap_redes}, se introducen las redes neuronales. Los vectores de palabras o ``word embeddings'' se discuten en el Capítulo~\ref{cap_embeddings}. Las tareas de etiquetado de secuencia, como el etiquetado gramatical y la extracción de entidades nombradas, se formalizan en el Capítulo~\ref{cap_etisec}, junto con modelos clásicos para esta tarea, como las cadenas de Markov ocultas y los Conditional Random Fields.
 
-A partir del capítulo~\ref{cap_cnn}, se discuten arquitecturas especializadas de redes neuronales para PLN. Las redes convolucionales se tratan en el capítulo~\ref{cap_cnn}, las recurrentes en el capítulo~\ref{cap_rnn}, los modelos secuencia a secuencia, junto con los modelos de atención, en el capítulo~\ref{cap_sec}, y finalmente, la arquitectura de Transformer se desarrolla en el capítulo~\ref{cap_trans}.
+A partir del Capítulo~\ref{cap_cnn}, se discuten arquitecturas especializadas de redes neuronales para PLN. Las redes convolucionales se tratan en el Capítulo~\ref{cap_cnn}, las recurrentes en el Capítulo~\ref{cap_rnn}, los modelos secuencia a secuencia, junto con los modelos de atención, en el Capítulo~\ref{cap_sec}, y finalmente, la arquitectura de Transformer se desarrolla en el Capítulo~\ref{cap_trans}.
 
-Cerramos el apunte en el capítulo~\ref{cap_llm}, donde se presentan modelos modernos de vectores de palabras contextualizados y los grandes modelos de lenguaje.
+Cerramos el apunte en el Capítulo~\ref{cap_llm}, donde se presentan modelos modernos de vectores de palabras contextualizados y los grandes modelos de lenguaje.
