--- a/slides/cap_ir.tex
+++ b/slides/cap_ir.tex
@@ -262,7 +262,7 @@ El algoritmo K-means comienza seleccionando $k$ centroides de manera aleatoria. 
             $\omega_j \leftarrow \omega_j \cup \{\vec{x}_n\}$\;
         }
         \For{$k \leftarrow 1$ \KwTo $K$}{
-            $\vec{\mu}_k \leftarrow \frac{1}{{|\omega_k|}} \sum_{\vec{x} \in \omega_k} x$\;
+            $\vec{\mu}_k \leftarrow \frac{1}{{|\omega_k|}} \sum_{\vec{x} \in \omega_k} \vec{x}$\;
         }
     }
     \Return{$\{\vec{\mu}_1, \ldots, \vec{\mu}_K\}$}\;
