--- a/slides/cap_ir.tex
+++ b/slides/cap_ir.tex
@@ -269,6 +269,41 @@ El algoritmo K-means comienza seleccionando $k$ centroides de manera aleatoria. 
     \caption{K-Means}\label{algo:kmeans}
 \end{algorithm}
 
+\section{Modelos de Tópicos}
+Otra familia de modelos valiosos para explorar colecciones de documentos son los modelos de tópicos, como Latent Dirichlet Allocation (LDA) \cite{blei2003latent}. Estos modelos asumen que cada documento es una mezcla de variables latentes llamadas tópicos, donde cada tópico es una bolsa de palabras con una probabilidad asociada.
+
+LDA es uno de los modelos de tópicos más ampliamente utilizados y se basa en las siguientes suposiciones:
+
+\begin{enumerate}
+ \item Cada documento está compuesto por una mezcla de tópicos. La distribución de tópicos en un documento se puede representar mediante una distribución de probabilidad.
+
+\item Cada tópico es una distribución de palabras. Esto significa que cada palabra en un documento proviene de uno de los tópicos presentes en el documento.
+
+\item La generación de palabras en un documento sigue un proceso de generación conjunta condicionado a la distribución de tópicos en el documento. Es decir, primero se selecciona un tópico de la distribución de tópicos del documento y luego se selecciona una palabra del tópico seleccionado.
+\end{enumerate}
+
+
+La representación matemática básica de LDA es la siguiente:
+
+
+\begin{itemize}
+\item \(D\) representa el conjunto de documentos en la colección.
+\item \(N\) es el número total de palabras en un documento.
+\item \(M\) es el número total de documentos en la colección.
+\item \(K\) es el número de tópicos predefinidos.
+\end{itemize}
+
+Las variables latentes en LDA son las siguientes:
+
+\begin{itemize}
+\item \(\theta_d\) es la distribución de tópicos en el documento \(d\).
+\item \(\phi_k\) es la distribución de palabras en el tópico \(k\).
+\item \(z_{d,n}\) es el tópico asignado a la \(n\)-ésima palabra en el documento \(d\).
+\item \(w_{d,n}\) es la \(n\)-ésima palabra en el documento \(d\).
+\end{itemize}
+
+La inferencia en LDA se realiza utilizando técnicas de inferencia Bayesiana, como el Muestreo de Gibbs y la Inferencia Variacional. Estos modelos son de gran utilidad para descubrir patrones ocultos, temas y estructuras en grandes conjuntos de datos textuales.
+
 \section{Conclusiones y Conceptos Adicionales}
 
 En este capítulo, hemos explorado la representación de documentos como vectores para calcular similitudes entre ellos. Los vectores de ``bolsa-de-palabras'' son una forma común de representar documentos, pero tienen limitaciones ya que carecen de estructura lingüística y pueden ser de alta dimensionalidad y dispersos.
